2009-05-17 zunda <zunda at freeshell.org>
	* disp_referrer.rb: added u option to regular expressions

2009-05-08 TADA Tadashi <t@tdtds.jp>
	* release 2.3.2.

2009-05-07 TADA Tadashi <t@tdtds.jp>
	* makerss.rb: without downcase character entities. thanks Masahiro Sakai.

2009-05-06 TADA Tadashi <t@tdtds.jp>
	* my-sequel.rb: fixed redundant nested repeat operator in Regexp.
	* comment_mail_smtp.rb: fixed error on ruby 1.9.1.
	* counter.rb: fixed error when @conf['bot'] is nil. And fixed a wrong HTML tag.

2009-04-30 SHIBATA Hiroshi <shibata.hiroshi@gmail.com>
	* amazon.rb: applied patch #151. thx arton.

2009-04-27 SHIBATA Hiroshi <shibata.hiroshi@gmail.com>
	* ja/calendar2.rb: modified language resource, changed Array of String.

2009-04-26 SHIBATA Hiroshi <shibata.hiroshi@gmail.com>
	* category.rb: applied patch #130. thx tamo.
	thx sugiyama. http://www.kde.ics.tut.ac.jp/~sugiyama/diary/20061127.html#p01

2009-03-30 SHIBATA Hiroshi <shibata.hiroshi@gmail.com>
	* pingback/pb.rb, trackback/tb.rb, xmlrpc/xmlrpc.rb:
	replace defout to stdout. defout is obsolete.

2009-03-10 TADA Tadashi <t@tdtds.jp>
	* todo.rb: changed WAVE DASH to TILDA.
	* squeeze.rb: changed name of global variable.

2009-02-26 TADA Tadashi <t@tdtds.jp>
	* my-ex.rb: fixed warning of Regexp on ruby 1.9.1.

2009-02-25 TADA Tadashi <sho@spc.gr.jp>
	* highlight.rb: suppressed Regexp warning on ruby 1.9.1.

2009-02-11 SHIBATA Hiroshi <shibata.hiroshi@gmail.com>
	* category.rb, random_google.rb, speed_comment.rb, weather.rb: supported ruby 1.9.1 more.

2009-02-03 TADA Tadashi <sho@spc.gr.jp>
	* amazon.rb: deleted duplicated author names.

2009-01-20 TADA Tadashi <sho@spc.gr.jp>
	* category.rb: added user_agent and request_method into fake CGI class.

2008-12-26 TADA Tadashi <sho@spc.gr.jp>
	* calendar2.rb, calendar3.rb: fixed bug on search mode. Thanks NT.

2008-12-15 TADA Tadashi <sho@spc.gr.jp>
	* amazon.rb: added "Artist" to author elements.

2008-11-12 TADA Tadashi <sho@spc.gr.jp>